static/v2/css/style.css
/* ... */
.center {
  text-align: center;
}

/******************************************************
  site footer
******************************************************/

.site-footer{
  padding: 16px;
  margin: 80px 0 30px;
  text-align: center;
  font-size: 14px
}

.site-footer > .link{
  margin: 0 12px;
  font-weight: 400;
}

/******************************************************
  package list
******************************************************/

.package-list{
  padding: 0;
  margin: 0;
  list-style: none;
}

.list-item{
  border-top: 1px solid #eee;
  padding: 4px 8px
}

.list-item:last-child{
  border-bottom: 1px solid #eee;
}

.list-item:hover{
  background: #fafafa;
}

.list-item > .title{
  font-weight: 600;
  font-size: 16px;
  margin: 0;
}

.list-item > .description{
  font-size: 14px;
  line-height: 1.3;
  color: rgba(0, 0, 0, .87);
  margin: 0;
}

.list-item > .metadata{
  font-size: 12px;
  margin: 8px 0 0;
}

.list-item.-simple > .metadata > .package-tag:first-of-type{
  margin-left: 0;
}

.score-box{
  float: right;
  margin: 8px;
  text-align: center;
  width: 36px;
}

.score-box > .number {
  display: block;
  border-radius: 50%;
  width: 28px;
  height: 28px;
  line-height: 28px;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  font-weight: 500;
}

.score-box > .number.-solid {
  background: #0075c9;
}

.score-box > .number.-good {
  background: #00c4b3;
}

.score-box > .number.-rotten {
  background: #bb2400;
}

.score-box > .number.-missing {
  background: #ccc;
}


.score-box > .text{
  font-size: 14px;
  color: #333;
}

.package-tag {
  background: #eef9fe;
  text-transform: uppercase;
  display: inline-block;
  font-size: 12px;
  font-weight: 500;
  color: #555;
  padding: 2px 8px;
  margin: 6px 0 4px 4px;
}

.package-tag.missing {
  background: #f0f0f0;
}

.package-tag.unidentified {
  background: #fff0f0;
}

/******************************************************
  home page
******************************************************/


.home-banner{
  text-align: center;
  padding: 40px 20px
}


.home-banner > .logo{
  width: 100%;
  max-width: 520px
}


.home-banner > .text{
  margin: 1em auto;
  max-width: 500px
}


.home-banner > .link{
  text-transform: uppercase;
  display: inline-block;
  margin: 0 16px;
  font-weight: 500;
  font-size: 14px
}


.home-banner > .link:after{
  content: ' >'
}


.home-banner > .search-bar{
  margin: 0 auto 24px
}


@media screen and (max-width: 600px) {
  .home-banner > .link{
    display: block;
    margin: 4px;
  }
}


.home-lists-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  max-width: 1100px;
  margin-top: 20px;
}

.home-lists-container .more {
  text-align: center;
  margin-top: 10px;
}

.home-lists-container .package-list {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
}

.home-lists-container .package-list .list-item {
  width: 305px;
  margin: 0 5px;
}

.home-lists-container .package-list .list-item:last-child {
  border-bottom: inherit;
}

/******************************************************
  list page
******************************************************/


.list-header{
  padding: 20px 30px;
}


.promo-box{
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  margin: 32px 0;
  max-width: 600px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex
}


.promo-box > .logo{
  width: 40px;
  margin-right: 30px;
  margin-top: 6px;
}


.promo-box > p{
  margin: 0;
}


.promo-box .get-started{
  display: inline-block;
  margin-top: 16px;
}


.promo-box .get-started:after{
  content: ' >';
}


.list-filters{
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0 0 16px;
  border: 1px solid #eee;
  border-radius: 3px
}


.list-filters > .filter{
  background: white;
  border-right: 1px solid #eee;
  color: #888;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 500;
  padding: 4px 24px;
  cursor: pointer;
}


.list-filters > .filter.-active{
  color: #0075C9;
  background: #eef9fe;
}


.package-count{
  font-size: 16px;
  color: #333;
  margin: 24px 6px 10px;
}


.pagination{
  margin: 20px auto;
  padding: 0;
  list-style: none;
  text-align: center
}


.pagination > li{
  display: inline-block;
  text-transform: uppercase;
  color: #0075C9;
  background: #f3f3f3;
  font-size: 14px;
  border-radius: 3px;
  margin-top: 40px;
}


.pagination > li.-disabled{
  pointer-events: none;
  color: #aaa;
}


.pagination > li.-active{
  pointer-events: none;
  color: #fff;
  background: #0075C9;
}


.pagination > li > a{
  display: inline-block;
  padding: 10px 16px;
  color: inherit;
  font-weight: 600;
}

/******************************************************
  package page
******************************************************/

.package-banner{
    padding: 10px;
}

.package-header{
    margin: 30px 0 10px
}

.package-header > .title{
    font-size: 32px;
    font-weight: 600;
    display: inline-block;
    margin: 0;
}

.package-header > .metadata{
    font-size: 14px;
    color: #555;
}

.package-header > .metadata > .tags{
    display: inline-block;
    margin-left: 20px;
}

.package-tabs{
    margin: 10px 0 20px;
    padding: 0;
    border-bottom: 1px solid #f0f0f0;
    list-style: none
}

.package-tabs > .tab{
    display: inline-block;
    margin-right: 35px;
    padding: 10px 2px;
    border-bottom: 4px solid;
    border-bottom-color: transparent;
    cursor: pointer;
    vertical-align: bottom;
}

.package-tabs > .tab:last-child{
    margin-right: 0;
}

.package-tabs > .tab.-active{
    color: #0075C9;
    border-bottom-color: #0075C9;
}

.package-tabs > .tab > .score-box{
    margin: 0;
}

.tabs-content{
}

.tabs-content > .content{
    display: none;
}

.tabs-content > .content.-active{
    display: block;
}
/* ... */

